<resources>
    <string name="app_name">MyDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_whishlist">Whishlist</string>
    <string name="title_collection">Collection</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>

</resources>